[package]
name = "encryption"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.87"
rsa = {version = "0.9.1", features = ["pem"]}
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5.0"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
hex-literal = "0.4"
sha2 = { version = "0.10.6", default-features = false, features = ["oid"] }
wasm-bindgen-test = "0.3.0"

[lib]
crate-type = ["cdylib", "rlib"]
